Changed yahtzee and kismet to use the new warning shells since it applies to more than just those games now.

--- a/Games/Kismet/Blazor/MainContainer.razor
+++ b/Games/Kismet/Blazor/MainContainer.razor
@@ -1,5 +1,5 @@
 <MultiplayerBasicParentShell>
-    <YahtzeeShellView>
+    <WarningShellView>
         <GamePage />
-    </YahtzeeShellView>
+    </WarningShellView>
 </MultiplayerBasicParentShell>
