--- a/Games/Yahtzee/Blazor/MainContainer.razor
+++ b/Games/Yahtzee/Blazor/MainContainer.razor
@@ -1,5 +1,5 @@
 <MultiplayerBasicParentShell>
-    <YahtzeeShellView>
+    <WarningShellView>
         <GamePage />
-    </YahtzeeShellView>
+    </WarningShellView>
 </MultiplayerBasicParentShell>
