Added possibility to refresh and show versions to make updating easier.

--- a/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
+++ b/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
@@ -31,12 +31,18 @@
                         <StackItem>
                             <GameButtonComponent CustomCallBack="OpenSettings" Display="Show Settings" />
                         </StackItem>
+                        <StackItem>
+                            <GameButtonComponent CustomCallBack="RefreshAsync" Display="Refresh" />
+                        </StackItem>
                         @if (_previousGame != "")
                         {
                             <StackItem>
                                 <GameButtonComponent CustomCallBack="OpenPreviousGame" Display="@_previousGame" />
                             </StackItem>
                         }
+                        <StackItem>
+                            Version @GlobalClass.Version
+                        </StackItem>
                     </StackLayout>  
                 }
             </TopContent>
