Fixed loader so version stands out more.

--- a/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
+++ b/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
@@ -41,7 +41,10 @@
                             </StackItem>
                         }
                         <StackItem>
-                            Version @GlobalClass.Version
+                            <div style="font-size: 3vh; margin-top: 10px;">
+                                Version @GlobalClass.Version
+                            </div>
+                            
                         </StackItem>
                     </StackLayout>  
                 }
