Final necessary changes in order to make sure I am able to prove I am able to capture the proper information.

--- a/Standard/BasicGameFrameworkLibrary/Blazor/Views/MultiplayerOpeningView.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/Views/MultiplayerOpeningView.razor
@@ -5,6 +5,10 @@
     <div>Help</div>
     return;
 }
+@if (_realLoad == false)
+{
+    return; //because has to wait to decide what to do next.
+}
 @if (_hostNewGameInfo is not null)
 {
     <div>
