--- a/Standard/BasicGameFrameworkLibrary/Blazor/Views/MultiplayerOpeningView.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/Views/MultiplayerOpeningView.razor
@@ -26,7 +26,7 @@
     @foreach (var item in _hostNewGameInfo.Players)
     {
         <div>
-            @GetTestPlayerInformation(item);
+            @MultiplayerOpeningView<P>.GetTestPlayerInformation(item);
         </div>
     }
     return;
