Fixes so won't get hosed if there is a large trade on monopoly card game.

--- a/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
+++ b/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
@@ -38,7 +38,7 @@
                 </StackItem>
             </StackLayout>
             <div>
-                <HandBlazor Hand="_vmData.PlayerHand1" />
+                <HandBlazor TargetContainerSize="70vw"  Hand="_vmData.PlayerHand1" />
             </div>
             <div>
                 <LabelGridComponent DataContext="_vmData" Labels="_labels" />
