First part in enabling the new screen for going out. For now, it knows if you can go out.  Nothing else happens yet. Also, allows you to toggle between trying to go out and changing your mind.

--- a/Games/MonopolyCardGame/Blazor/MonopolyFinderComponent.razor
+++ b/Games/MonopolyCardGame/Blazor/MonopolyFinderComponent.razor
@@ -1,3 +1,20 @@
-﻿<h3>MonopolyFinderComponent</h3>
+﻿@inherits BasicGameView<MonopolyCardGameMainViewModel>
+<div>
+    <ShowCardBlazor />
+</div>
+<div>
+    <HandBlazor Hand="_vmData!.TempHand1" TargetContainerSize="80vw" />
+</div>
+<div>
 
-
+</div>
+<div>
+    <GameButtonComponent Display="Put Back"
+                         CommandObject="PutBackCommand" />
+    @if (Status == EnumManuelStatus.InitiallyGoingOut)
+    {
+        <GameButtonComponent Display="Failed To Go Out" CustomCallBack="OnGoBack" />
+        <GameButtonComponent Display="Confirm Going Out" CustomCallBack="FirstGoOutAsync" />
+    }
+</div>
+<TempSetsBlazor TargetContainerSize="60vh" Divider="1.5" TempPiles="_vmData.TempSets1" />
