--- a/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
+++ b/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
@@ -22,7 +22,9 @@
                     <DrawPileBlazor DeckPile="_vmData.Deck1" />
                 </StackItem>
                 <StackItem>
-                    <GameButtonComponent Display="Organize Cards" CustomCallBack="DataContext.OrganizeCards" />
+                    <GameButtonComponent Display="Organize Cards"
+                        StartOnNewLine=true
+                        CommandObject="OrganizeCardsCommand" />
                     <GameButtonComponent Display="Resume"
                                          CommandObject="ResumeCommand"
                                          StartOnNewLine="true" />
