--- a/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
+++ b/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
@@ -28,7 +28,7 @@
                     <GameButtonComponent Display="Resume"
                                          CommandObject="ResumeCommand"
                                          StartOnNewLine="true" />
-                    <GameButtonComponent Display="Attempt To Go Out"
+                    <GameButtonComponent Display="Go Out"
                                          CommandObject="GoOutCommand"
                                          StartOnNewLine="true" />
                 </StackItem>
