Final fixes for the new feature for manually choosing cards on monopoly card game.

--- a/Games/MonopolyCardGame/Blazor/MonopolyFinderComponent.razor
+++ b/Games/MonopolyCardGame/Blazor/MonopolyFinderComponent.razor
@@ -19,7 +19,7 @@
     @if (Status == EnumManuelStatus.OrganizingCards)
     {
         <GameButtonComponent Display="Finish Organizing Cards" CustomCallBack="OnOrganizedCards" />
-        <GameButtonComponent Display="Start Automate Populate Cards" CustomCallBack="PopulateManuelCards" />
+        @* <GameButtonComponent Display="Start Automate Populate Cards" CustomCallBack="PopulateManuelCards" /> *@
     }
     else if (Status == EnumManuelStatus.Final || Status == EnumManuelStatus.OthersLayingDown)
     {
