--- a/Games/MonopolyCardGame/Blazor/TempSetsBlazor.razor
+++ b/Games/MonopolyCardGame/Blazor/TempSetsBlazor.razor
@@ -27,7 +27,7 @@
     </StackLayout>
     return;
 }
-<div style="height: 40vh">
+<div style="height: @TargetHeight">
     <LeftOverLayout>
         <MainContent>
             @foreach (var pile in TempPiles.SetList)
@@ -38,9 +38,9 @@
                         <TemporaryCardsBlazor Hand="pile"
                                               AdditionalSpacing="-4"
                                               HandType="EnumHandList.Horizontal"
-                                              TargetImageSize="10vh"
+                                              TargetImageSize="@TargetImageSize"
                                               Divider="1.4"
-                                              TargetContainerSize="45vw"
+                                              TargetContainerSize="@TargetContainerSize"
                                               Context="item">
                             <CardGraphicsBlazor CommandObject="pile.ObjectSingleClickCommand"
                                                 CommandParameter="item"
