Rest of the work necessary for the advanced trade processes.

--- a/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
+++ b/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
@@ -17,6 +17,7 @@
     @if (_tradeOpponent is not null)
     {
         <TradeBlazor OppenentUsed="_tradeOpponent"
+            OnTraded="FinishTradeAsync"
             SelfPlayer="GetPlayer"
             OnCancelled="CancelTradeAsync" />
         return;
