--- a/Games/MonopolyCardGame/Blazor/TradeBlazor.razor
+++ b/Games/MonopolyCardGame/Blazor/TradeBlazor.razor
@@ -7,24 +7,23 @@
     </div>
     return;
 }
-
-<GridContainer Columns="auto 15vw 1fr">
+<GridContainer Columns="auto 1fr 65vw">
     <GridItem Column="1">
-
-        <StackLayout ItemSpacing="20px">
+        <StackLayout ItemSpacing="10px">
             <StackItem>
                 <HandBlazor Hand="_vmData!.TempHand1" Divider=1.5 HandType="EnumHandList.Vertical" TargetContainerSize="85vh" />
             </StackItem>
-
             <StackItem>
                 <div>
-                    <GameButtonComponent Display="Cancel Trade" CustomCallBack="OnCancelled" />
+                    <GameButtonComponent Display="Cancel Trade" Width="14vh" CustomCallBack="OnCancelled" />
                 </div>
+                @if (_used > 0)
+                {
+                    <div>
+                        <GameButtonComponent Display="Confirm Trade" Width="14vh" CustomCallBack="ConfirmTrade" />
+                    </div>
+                }
             </StackItem>
-
-
-
-
         </StackLayout>
     </GridItem>
     <GridItem Column="2">
@@ -62,7 +61,7 @@
     <GridItem Column="3">
         
         <BaseFrameBlazor Text="@StartText">
-            <div style="width: 60vw; height: 55vh;">
+            <div style="width: 60vw; height: 40vh;">
                 <LeftOverLayout>
                     <MainContent>
                         <WrapLayout ColumnWidth="20vw" RenderList="OppenentUsed.TradePile!.HandList" Context="Card">
@@ -78,7 +77,7 @@
             </div>
             
         </BaseFrameBlazor>
-        <TempSetsBlazor TargetHeight="25vh"
+        <TempSetsBlazor TargetHeight="40vh"
                         TargetImageSize="8vh"
                         TargetContainerSize="60vw"
                         Mode="EnumMode.Plain"
