Rename component to make it easier to tell its for organizing cards on monopoly card game.

--- a/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
+++ b/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
@@ -8,9 +8,9 @@
     {
         if (GetPlayer.PlayerCategory == EnumPlayerCategory.Self)
         {
-            <MonopolyFinderComponent Player="GetPlayer"
-                                     OnOrganizedCards=FinishedOrganizingCardsAsync
-                                     Status="_gameContainer.SaveRoot.ManuelStatus" />
+            <CardOrganizerComponent Player="GetPlayer"
+                                    OnOrganizedCards=FinishedOrganizingCardsAsync
+                                    Status="_gameContainer.SaveRoot.ManuelStatus" />
             return;
         }
     }
