Completed the Calculator View Model. Also, started creating component for Calculator Results Component.

--- a/Games/MonopolyCardGame/Blazor/CardOrganizerComponent.razor
+++ b/Games/MonopolyCardGame/Blazor/CardOrganizerComponent.razor
@@ -25,4 +25,13 @@
         <GameButtonComponent CommandObject="ManuelCommand" Display="Play Monopolies" />
     }
 </div>
-<TempSetsBlazor TargetContainerSize="40vh" Divider="1.5" TempPiles="Model.TempSets1" />
+<StackLayout>
+    <StackItem>
+        <TempSetsBlazor TargetContainerSize="40vh" Divider="1.5" TempPiles="Model.TempSets1" />
+    </StackItem>
+    <StackItem>
+        <div>
+            Hello
+        </div>
+    </StackItem>
+</StackLayout>
